llvm-toolchain-snapshot (1:9~svn358688-1~exp1) experimental; urgency=medium

  * New snapshot release
  * remove debian/patches/reproducible-pch.diff
    done upstream
  * No longer install lldb-test (disable upstream in 358574)
  * Install lit-cpuid in llvm-9-tools
  * libclang-X.Y: add clang_Cursor_isAnonymousRecordDecl and
    clang_Cursor_isInlineNamespace to the list of symbols
  * Install usr/lib/llvm-9/lib/SampleAnalyzerPlugin.so
    usr/lib/llvm-9/lib/CheckerDependencyHandlingAnalyzerPlugin.so
    in libclang-9-dev

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 18 Apr 2019 19:05:45 +0200

llvm-toolchain-snapshot (1:9~svn358327-1~exp1) experimental; urgency=medium

  * New snapshot release
  * Remove libc++fs.a (done upstream)
  * add clang-doc in clang-tools
  * python2.7/site-packages/readline.so removed from liblldb
  * libOptRemarks.so has been renamed to libRemarks.so
  * new symbol: omp_get_supported_active_levels

  [ Gianfranco Costamagna ]
  * Commit Ubuntu delta to 8 and snapshot branches

  [ Matthias Klose ]
  * Remove the autopkg test for a genuine LLVM bug.

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 13 Apr 2019 11:06:00 +0200

llvm-toolchain-snapshot (1:9~svn354105-1~exp1) experimental; urgency=medium

  * New snapshot release

  [ John Paul Adrian Glaubitz ]
  * Remove usr/lib/llvm-@LLVM_VERSION@/lib/LLVM*.so
    from debian/llvm-X.Y-dev.install.in and install
    the files conditionally in debian/rules

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 15 Feb 2019 09:32:35 +0100

llvm-toolchain-snapshot (1:9~svn353106-1~exp1) experimental; urgency=medium

  * New snapshot release
  * Install lldb-instr-X in lldb-X

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 04 Feb 2019 23:44:27 +0100

llvm-toolchain-snapshot (1:9~svn351420-1~exp2) experimental; urgency=medium

  * Remove 'Multi-Arch: same' in libclang
    (Closes: #874248)

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 04 Feb 2019 23:42:28 +0100
