@@ -7,8 +7,9 @@ llvm-toolchain-snapshot (1:9~svn358688-1~exp1) experimental; urgency=medium
   * Install lit-cpuid in llvm-9-tools
   * libclang-X.Y: add clang_Cursor_isAnonymousRecordDecl and
     clang_Cursor_isInlineNamespace to the list of symbols
-  * Install usr/lib/llvm-9/lib/SampleAnalyzerPlugin.so
-    usr/lib/llvm-9/lib/CheckerDependencyHandlingAnalyzerPlugin.so
+  * Install usr/lib/llvm-9/lib/{SampleAnalyzerPlugin.so,
+    CheckerDependencyHandlingAnalyzerPlugin.so,
+    CheckerOptionHandlingAnalyzerPlugin.so}
     in libclang-9-dev
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 18 Apr 2019 19:05:45 +0200
